Fix keyword overlap

--- a/webapp/src/app/components/event/event-list/event-list.style.scss
+++ b/webapp/src/app/components/event/event-list/event-list.style.scss
@@ -15,7 +15,7 @@
 
 .eventKeywordSection {
   color: #555;
-  margin-bottom: 6em;
+  margin-bottom: 7em;
   height: 2em;
 }
 
